# video_vault

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yaml  health_check.yaml  publish.yaml  release.yaml
docs/: api.md  development.md  index.md  user-guide.md
tests/test_video_vault/: test_main.py
tests/test_video_vault/test_app/: test_main.py
tests/test_video_vault/test_app/test_core/: test_downloads.py  test_ffmpeg.py  test_security.py
tests/test_video_vault/test_app/test_db/: test_models.py  test_setup.py
tests/test_video_vault/test_app/test_ui/test_pages/: test_add_downloads.py  test_downloads.py  test_player.py
tests/test_video_vault/test_app/test_ui/test_windows/: test_main.py
tests/test_video_vault/test_artifacts/: test_build.py
tests/test_video_vault/test_build_project/: test_build.py
tests/test_video_vault/test_core/: test_downloads.py  test_security.py
tests/test_video_vault/test_db/: test_models.py  test_setup.py
tests/test_video_vault/test_db/test_migrations/: test_0001_initial.py
tests/test_video_vault/test_dev/test_artifacts/test_builder/: test_builder.py
tests/test_video_vault/test_dev/test_artifacts/test_builders/: test_builder.py
tests/test_video_vault/test_dev/test_builders/: test_builder.py
tests/test_video_vault/test_dev/test_cli/: test_subcommands.py
tests/test_video_vault/test_dev/test_configs/: test_configs.py
tests/test_video_vault/test_externals/: test_ffmpeg.py
tests/test_video_vault/test_externals/test_ffmpegs/: test_ffmpeg.py
tests/test_video_vault/test_src/test_core/: test_downloads.py  test_ffmpeg.py  test_security.py
tests/test_video_vault/test_src/test_db/: test_models.py  test_setup.py
tests/test_video_vault/test_src/test_db/test_migrations/: test_0003_alter_file_id.py
tests/test_video_vault/test_src/test_ui/test_pages/: test_add_downloads.py  test_downloads.py  test_player.py
tests/test_video_vault/test_src/test_ui/test_windows/: test_main.py
tests/test_video_vault/test_ui/test_pages/: test_add_downloads.py  test_downloads.py  test_player.py
tests/test_video_vault/test_ui/test_windows/: test_main.py
video_vault/: __init__.py  main.py
video_vault/app/: main.py
video_vault/app/core/: consts.py  downloads.py  security.py
video_vault/app/db/: make_migrations.py  models.py  setup.py
video_vault/app/ui/pages/: add_downloads.py  downloads.py  player.py
video_vault/app/ui/windows/: main.py
video_vault/artifacts/: build.py
video_vault/build_project/: VideoVault.spec  build.py
video_vault/core/: consts.py  downloads.py  security.py
video_vault/db/: __init__.py  make_migrations.py  models.py  setup.py
video_vault/db/migrations/: 0001_initial.py  0002_file_last_position.py
video_vault/dev/artifacts/builder/: builder.py
video_vault/dev/artifacts/builders/: builder.py
video_vault/dev/builders/: builder.py
video_vault/dev/cli/: subcommands.py
video_vault/dev/configs/: configs.py
video_vault/src/core/: consts.py  downloads.py  ffmpeg.py  security.py
video_vault/src/db/: make_migrations.py  models.py  setup.py
video_vault/src/db/migrations/: 0003_alter_file_id.py
video_vault/src/ui/: stylesheet.py
video_vault/src/ui/pages/: add_downloads.py  downloads.py  player.py
video_vault/src/ui/windows/: main.py
video_vault/ui/pages/: add_downloads.py  downloads.py  player.py
video_vault/ui/windows/: main.py
