[project]
name = "video-vault"
version = "0.5.15"
description = "An application to download any video"
authors = [
    {name = "Winipedia"},
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "imageio-ffmpeg",
    "winidjango",
    "winipyside",
    "yt-dlp",
]

[project.scripts]
video-vault = "pyrig.dev.cli.cli:main"

[dependency-groups]
dev = [
    "bandit",
    "django-stubs",
    "mypy",
    "pre-commit",
    "pyinstaller",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "pytest-qt",
    "ruff",
    "types-defusedxml",
    "types-pyinstaller",
    "types-pyyaml",
    "types-setuptools",
    "types-tqdm",
    "yt-dlp-types",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "video_vault"
module-root = ""

[tool.ruff]
exclude = [
    ".*",
    "**/migrations/*.py",
]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D203",
    "D213",
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
files = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=video_vault --cov-report=term-missing --cov-fail-under=80"

[tool.bandit]
exclude_dirs = [
    ".*",
]

[tool.bandit.assert_used]
skips = [
    "*test_*.py",
]
