[project]
name = "video-vault"
version = "0.6.8"
description = "An application to download any video"
authors = [
    {name = "Winipedia"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
dependencies = [
    "imageio-ffmpeg",
    "platformdirs",
    "winidjango",
    "winipyside",
    "yt-dlp",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license-files = [
    "LICENSE",
]

[project.scripts]
video-vault = "pyrig.dev.cli.cli:main"

[dependency-groups]
dev = [
    "bandit",
    "django-stubs",
    "dotenv",
    "mypy",
    "pillow",
    "pre-commit",
    "pygithub",
    "pyinstaller",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "pytest-qt",
    "pyyaml",
    "ruff",
    "setuptools",
    "tenacity",
    "tomlkit",
    "ty",
    "types-defusedxml",
    "types-pyinstaller",
    "types-pyyaml",
    "types-setuptools",
    "types-tqdm",
    "yt-dlp-types",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "video_vault"
module-root = ""

[tool.ruff]
exclude = [
    ".*",
    "**/migrations/*.py",
]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D203",
    "D213",
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]
"**/tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
files = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=video_vault --cov-report=term-missing --cov-fail-under=90"

[tool.bandit]
exclude_dirs = [
    ".*",
]

[tool.bandit.assert_used]
skips = [
    "*/tests/*.py",
    "*test_*.py",
]
